Changed font to system font. Fixed some spacing issues.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@ $transition-duration: 100ms;
 
 //html {}
 body {
-    font-family: Arial;
+    font-family: -apple-system, Times New Roman, Helvetica Neue, Arial, sans-serif;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -59,17 +59,17 @@ h2 { // 6%h
     li {
         display: inline-block;
         background-color: $dark_primary;
-        margin: 1vh 1vw;
+        margin: 1vw;
         padding: 0;
         width: 12vw;
-        height: 8vh;
-        line-height: 8vh;
+        height: 12vw;
+        line-height: 12vw;
         text-align: center;
         vertical-align: middle;
         font-size: 5vmin; // used width because button can be tall and narrow
         font-weight: bold;
 
-        @include border-radius(2vh);
+        @include border-radius(2vmin);
 
 
 
@@ -153,6 +153,7 @@ h2 { // 6%h
         width: 36vw;
 
         li {
+            margin: 1vh;
             width: 10vw;
             height: 12vh;
             line-height: 12vh;
